[package]
name = "rust-radio"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.28"

# Async & HTTP (✅ rustls вместо native-tls!)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Error handling
anyhow = "1"